--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,15 @@ services:
   api:
     image: ${DOCKER_HUB_USERNAME}/hr-system-api:latest
     restart: always
+    ports:
+      - "8000:8000"
     volumes:
       - static_value:/app/django_static/
       - media_value:/app/media/
     depends_on:
       - postgres-db
+    environment:
+      - DB_HOST=postgres-db
     env_file:
       - ./.env
 
