--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,8 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - static_value:/app/django_static/
-      - media_value:/app/media/
+      - static_value:/code/static/
+      - media_value:/code/media/
     depends_on:
       - postgres-db
     environment:
@@ -25,27 +25,18 @@ services:
     env_file:
       - ./.env
 
-  frontend:
-    image: ${DOCKER_HUB_USERNAME}/hr-system-frontend:latest
-    volumes:
-      - frontend_build:/app/dist/
-
   nginx:
-    image: nginx:latest
+    image: ${DOCKER_HUB_USERNAME}/hr-system-nginx-frontend:latest
     ports:
       - "80:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-      - frontend_build:/usr/share/nginx/html/
-      - static_value:/var/html/django_static/
+      - ./nginx/nginx.dev.conf:/etc/nginx/conf.d/default.conf
+      - static_value:/var/html/static/
       - media_value:/var/html/media/
     depends_on:
-      - frontend
       - api
-
 
 volumes:
   postgres-db:
   static_value:
   media_value:
-  frontend_build:
